tipo de selectores

--- a/templates/box-model.html
+++ b/templates/box-model.html
@@ -3,7 +3,7 @@
 <head>
 
     <title>HTML &amp; CSS: Curso practico avanzado</title>
-    <link rel="stylesheet" href="style-box-model.css">
+    <link rel="stylesheet" href="../styles/stylel-box-model.css">
 </head>
 <body>
     <h1>HTML &amp; CSS: Curso practico avanzado</h1>
